update userCOntrolelr
