# storage/api-docs/api-docs.json
@@ -1273,6 +1273,30 @@
             }
         },
         "/api/user/{id}": {
+            "get": {
+                "tags": [
+                    "Account"
+                ],
+                "summary": "Get user",
+                "operationId": "isUsers",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "get user"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success with some route data"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            },
             "put": {
                 "tags": [
                     "Account"
